fixed gap between hero image and navbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -59,11 +59,12 @@ a, a:link, a:visited{
     position: relative;
     margin-left: -50vw;
     left: 50%;
+    margin-top:-50px;
 }
 
 .screen-text {
     position: absolute;
-    top:35%;
+    top:25%;
     left:50%;
     transform: translate(-50%, 50%);
     z-index: 1;
